added windows template related stuff

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -441,7 +441,7 @@
 						if(guestOS.indexOf("Linux")>-1) {
 							alert("SSH Connect: ssh test@"+ip+"\n password is 123");
 						} else {
-							alert("Windows!");
+							alert("RDP Connect: administrator@"+ip+"\n password is 12!@qwQW");
 						}
 						
 			        }
